packages/build/tests/error/fixtures/exception/plugin.js
module.exports = {
  async onPreBuild() {
    throw new Error('test')
  },
}
